# tiny-commander

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: wiki-sync.yml
Formula/: tiny-commander.rb
docs/: Architecture.md  Configuration.md  Development.md  Home.md  Installation.md  Key-Bindings.md  MANUAL_TEST_PLAN.md  Usage.md
tests/: __init__.py  helpers.py  test_app.py  test_back_forward_navigation.py  test_chmod.py  test_chmod_dialog.py  test_chown.py  test_chown_dialog.py  test_color_manager.py  test_colors.py  test_command_exec.py  test_command_line.py  test_command_line_priority.py  test_config.py  test_config_path.py  test_confirmation_dialog.py  test_create_entry_template.py  test_create_file.py  test_ctrl_x_chord.py  test_delete.py  test_dialog.py  test_dir_size.py  test_directory_change.py  test_display.py  test_display_entry.py  test_dropdown.py  test_edit.py  test_f5_copy.py  test_file_exec.py  test_file_ops.py  test_filename_insert.py  test_first_run.py  test_flicker_reduction.py  test_function_bar.py  test_function_bar_mouse.py  test_help_dialog.py  test_hidden.py  test_input_dialog.py  test_key_bindings.py  test_launcher.py  (+30 more)
tnc/: __init__.py  __main__.py  _version_check.py  app.py  colors.py  command_line.py  config.py  dialog.py  file_ops.py  function_bar.py  menu.py  modal.py  panel.py  permissions.py  status_bar.py  utils.py
